2009-06-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConnectionStream.cs: close the underlying socket if there's an
	exception when closing the stream. Fixes bug #514996.

2009-06-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* WebConnectionStream.cs: Keep count of all bytes written, and perform
	write overflow check in both buffered and non-buffered writing (if
	not using chunked transfer encoding). Fixes bug #510642.

2009-06-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* WebClient.cs: Use lowercase hex bytes to match MS. Avoid using
	zero-length string literal. Fixed exception argument name to match
	MS. 
	* WebConnectionStream.cs: Throw a WebException that wraps an
	IOException when closing the stream before all bytes are written.

2009-06-19 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConnection.cs: make sure we don't open a new socket if the
	request is aborted before we establish the connection. Fixes bug
	#514591.

	* HttpWebRequest.cs: new property to return abort status. Invoke the
	abort handler before doing anything else when Abort() is called for
	the first time.

2009-06-17 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* EndPointListener.cs: call CheckIfRemove() after removing a regular
	prefix. Fixes bug #513849.
	* EndPointManager.cs: make sure we use the right lock when one prefix
	of a collection fails to be added and we need to remove all of the
	prefixes.
	Clear the ip_to_endpoints hashtable if there are no more prefixes
	listening on that address.

2009-06-16 Andrés G. Aragoneses <aaragoneses@novell.com>

	* WebConnection.cs: propagate the exception to the request.
	* WebException.cs: new internal ctor.
	* HttpWebRequest.cs: use new ctor to encapsulate the innerException.
	Fixes #323452.

2009-06-15 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: for unknown methods, always send the request once
	we are connected even if there's no writeStream. Fixes bug #513087.
